apply plugin: 'com.android.application'
apply plugin: 'org.greenrobot.greendao' // apply plugin
android {
    aaptOptions.cruncherEnabled = false
    aaptOptions.useNewCruncher = false

    compileSdkVersion 29
    buildToolsVersion "29.0.3"

    defaultConfig {
        applicationId "com.example.flymessagedome"
        minSdkVersion 24
        targetSdkVersion 29
        versionCode 5
        versionName "1.0.5"
        multiDexEnabled true
        /** 腾讯bugly */
        /*ndk {
            // 设置支持的 SO 库构架
            abiFilters 'armeabi', 'x86'// 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
        }*/
        ndk {
            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a","x86", "x86_64"
        }
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    sourceSets {
        main {
            jniLibs.srcDirs = ['libs']
        }
    }
}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])

    implementation files('libs/BaiduLBS_Android.jar')

    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'androidx.preference:preference:1.1.0-rc01'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    //视频通话
//    implementation 'org.webrtc:google-webrtc:1.0.26131'
    //socket.io
//    implementation('io.socket:socket.io-client:0.8.3') {
        // excluding org.json which is provided by Android
//        exclude group: 'org.json', module: 'json'
//    }
    //分包
    implementation 'com.android.support:multidex:1.0.3'
    //腾讯bug管理平台
    compile 'com.tencent.bugly:crashreport_upgrade:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.0.0
    compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.2.0
    //语音录制
    implementation 'com.github.lewis-v:AudioH:1.0.0'
    //获取语音时长
    implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-core:1.0.15'
    implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-native:1.0.15'
    //emoji组件
    implementation 'io.github.rockerhieu:emojicon:1.4.1'
    //权限申请
    implementation 'pub.devrel:easypermissions:2.0.0'
    //相册选取照片
    implementation 'com.github.bingoogolapple:BGAPhotoPicker-Android:2.0.3'
    implementation 'com.github.bingoogolapple:BGABaseAdapter-Android:2.0.1'
    //二维码扫描与生成
    implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
    //地区选择
    implementation 'com.github.duanhong169:picker-view:1.0.1'
    //城市选择
    implementation "com.github.xuexiangjys:CityPicker:1.0.2"
    //上拉加载更多
    implementation 'cn.bingoogolapple:bga-refreshlayout-androidx:2.0.0@aar'
    //bga_banner
    implementation 'cn.bingoogolapple:bga-banner:3.0.0@aar'
    implementation 'cn.bingoogolapple:bga-refreshlayout-androidx:2.0.0@aar'

    //loading dialog
    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'

    //注解
    implementation 'com.jakewharton:butterknife:10.0.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'

    //glide
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'

    implementation 'androidx.recyclerview:recyclerview:1.0.0'
    implementation 'androidx.cardview:cardview:1.0.0'

    // Rx
    implementation 'io.reactivex:rxandroid:1.2.1'
    implementation 'io.reactivex:rxjava:1.2.0'

    // retrofit
    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'

    // okhttp
    implementation 'com.squareup.okhttp3:okhttp:3.6.0'

    // dagger
    annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
    implementation 'com.google.dagger:dagger:2.7'

    //缓存框架
    implementation 'com.danikula:videocache:2.7.0'

    //greendao arm数据库
    implementation 'org.greenrobot:greendao:3.2.2'

    //aria  下载框架
    implementation 'com.arialyy.aria:core:3.8.6'
    annotationProcessor 'com.arialyy.aria:compiler:3.8.6'

    //图片裁剪框架ucrop
    implementation 'com.github.yalantis:ucrop:2.2.4'

    //WebSocket
    implementation "org.java-websocket:Java-WebSocket:1.4.0"

    //fastJson
    implementation 'com.alibaba:fastjson:1.2.60'
    implementation 'com.google.android.material:material:1.1.0'
    //agentweb
    implementation 'com.just.agentweb:agentweb-androidx:4.1.4' // (必选)
    implementation 'com.just.agentweb:filechooser-androidx:4.1.4'// (可选)
    implementation 'com.download.library:downloader-androidx:4.1.4'// (可选)
}
